[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Math Game"
authors = ["Gaevskii.V <gaevskii.v95@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/Nafanya-dev/python-project-49"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime ="brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[classifiers]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
